Änderungen Layout Charting Library hinzugefügt

--- a/SqlStressTester/Views/DataSourcesView.xaml
+++ b/SqlStressTester/Views/DataSourcesView.xaml
@@ -9,7 +9,7 @@
              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
              xmlns:conv="clr-namespace:SqlStressTester.Utils.Converter;assembly=SqlStressTester.Utils"
              xmlns:helper="clr-namespace:SqlStressTester.Utils.Helper;assembly=SqlStressTester.Utils"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=VM:DataSourcesViewModel, IsDesignTimeCreatable=False}"
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -24,6 +24,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0" Orientation="Horizontal">
                         <Button Margin="{adonisUi:Space 0.5}" Content="Neu" Command="{Binding Path=AddNewDataSourceCommand}" />
@@ -32,8 +33,10 @@
                         <Button Margin="{adonisUi:Space 0.5}" Content="Löschen" 
                             Command="{Binding Path=DeleteDataSourceCommand}" CommandParameter="{Binding Path=CurrentDataSource}" />
                     </StackPanel>
-                    <Button Grid.Column="1" DockPanel.Dock="Bottom" Margin="{adonisUi:Space 0.5}" Content="Speichern" 
-                        Command="{Binding Path=SaveDataSourceCommand}" CommandParameter="{Binding Path=CurrentDataSource}" />
+                    <Button Grid.Column="1" Margin="{adonisUi:Space 0.5}" Content="Laden"
+                            Command="{Binding Path=LoadDataSourceCommand}" />
+                    <Button Grid.Column="2" Margin="{adonisUi:Space 0.5}" Content="Speichern" 
+                        Command="{Binding Path=SaveDataSourceCommand}" />
                 </Grid>
                 <DataGrid Margin="{adonisUi:Space 0.5}" 
                           ItemsSource="{Binding Path=DataSources}" SelectedItem="{Binding Path=CurrentDataSource}" 
@@ -63,25 +66,59 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <CheckBox Grid.Row="0" Margin="{adonisUi:Space 0.5}" Content="MySQL/MariaDB" IsChecked="{Binding Path=CurrentDataSource.IsMySql, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <controls:FormControl Grid.Row="1" Grid.ColumnSpan="1" HeaderText="Server" Text="{Binding Path=CurrentDataSource.Server, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <controls:FormControl Grid.Row="1" Grid.Column="2" HeaderText="Port" 
-                                      Text="{Binding Path=CurrentDataSource.Port, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                      IsEnabled="{Binding Path=CurrentDataSource.IsMySql}" />
-                <CheckBox Grid.Row="2" Grid.ColumnSpan="2" Margin="{adonisUi:Space 0.5}" Content="Benutze Windows-Authentifizierung"
+                <Grid Grid.Row="0" Grid.ColumnSpan="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Margin="{adonisUi:Space 0.5}" Text="Anzeigenamme" />
+                    <TextBox Grid.Row="1" Margin="{adonisUi:Space 0.5}" Text="{Binding Path=CurrentDataSource.DisplayName}" />
+                </Grid>
+                <CheckBox Grid.Row="1" Margin="{adonisUi:Space 0.5}" Content="MySQL/MariaDB" IsChecked="{Binding Path=CurrentDataSource.IsMySql}" />
+                <Grid Grid.Row="2" Grid.ColumnSpan="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Margin="{adonisUi:Space 0.5}" Text="Server" />
+                    <TextBox Grid.Row="1" Margin="{adonisUi:Space 0.5}" Text="{Binding Path=CurrentDataSource.Server}" />
+                </Grid>
+                <Grid Grid.Row="2" Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Margin="{adonisUi:Space 0.5}" Text="Port" />
+                    <TextBox Grid.Row="1" Margin="{adonisUi:Space 0.5}" Text="{Binding Path=CurrentDataSource.Port}"
+                             IsEnabled="{Binding Path=CurrentDataSource.IsMySql}"/>
+                </Grid>
+                <CheckBox Grid.Row="3" Grid.ColumnSpan="2" Margin="{adonisUi:Space 0.5}" Content="Benutze Windows-Authentifizierung"
                           IsEnabled="{Binding Path=CurrentDataSource.IsMySql, Converter={StaticResource NegateBooleanConverter}}"
-                          IsChecked="{Binding Path=CurrentDataSource.WindowsAuthentication, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <controls:FormControl Grid.Row="3" Grid.ColumnSpan="2" HeaderText="Benutzer" 
-                                      IsEnabled="{Binding Path=CurrentDataSource.WindowsAuthentication, Converter={StaticResource NegateBooleanConverter}}"
-                                      Text="{Binding Path=CurrentDataSource.User, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <PasswordBox helper:PasswordBoxHelper.BindPassword="True" helper:PasswordBoxHelper.BoundPassword="{Binding Path=CurrentDataSource.Password}" />
-                <!--<controls:FormControl Grid.Row="4" Grid.ColumnSpan="2" HeaderText="Passwort" 
-                                      IsEnabled="{Binding Path=CurrentDataSource.WindowsAuthentication, Converter={StaticResource NegateBooleanConverter}}"
-                                      Text="{Binding Path=CurrentDataSource.Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
-                <Button Margin="{adonisUi:Space 0.5}" Grid.Row="5" Grid.ColumnSpan="2" Content="Verbindung Herstellen"
+                          IsChecked="{Binding Path=CurrentDataSource.WindowsAuthentication}" />
+                <Grid Grid.Row="4" Grid.ColumnSpan="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Margin="{adonisUi:Space 0.5}" Text="Benutzer" />
+                    <TextBox Grid.Row="1" Margin="{adonisUi:Space 0.5}" Text="{Binding Path=CurrentDataSource.User}"
+                             IsEnabled="{Binding Path=CurrentDataSource.WindowsAuthentication, Converter={StaticResource NegateBooleanConverter}}"/>
+                </Grid>
+                <Grid Grid.Row="5" Grid.ColumnSpan="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Margin="{adonisUi:Space 0.5}" Text="Passwort" />
+                    <PasswordBox Margin="{adonisUi:Space 0.5}" Grid.Row="1" 
+                                 IsEnabled="{Binding Path=CurrentDataSource.WindowsAuthentication, Converter={StaticResource NegateBooleanConverter}}"
+                                 helper:PasswordBoxHelper.BindPassword="True" helper:PasswordBoxHelper.BoundPassword="{Binding Path=CurrentDataSource.Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+                <Button Margin="{adonisUi:Space 0.5}" Grid.Row="6" Grid.ColumnSpan="2" Content="Verbindung Herstellen"
                         Command="{Binding Path=ConnectToDatabaseCommand}" CommandParameter="{Binding Path=CurrentDataSource}" />
-                <Grid Grid.Row="6" Grid.ColumnSpan="2">
+                <Grid Grid.Row="7" Grid.ColumnSpan="2">
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
